@@ -24,11 +24,11 @@
 @class TDBTable;
 
 
-@interface TDBGroup: NSObject
+@interface TDBTransaction: NSObject
 
 @property (nonatomic, readonly) NSUInteger tableCount;
 
-+(TDBGroup *)groupWithFile:(NSString *)filename withError:(NSError *__autoreleasing *)error;
++(TDBTransaction *)groupWithFile:(NSString *)filename withError:(NSError *__autoreleasing *)error;
 
 /**
  * You pass the ownership of the specified buffer to the group. The
@@ -36,9 +36,9 @@
  * the buffer you pass, must have been allocated using C function
  * malloc().
  */
-+(TDBGroup *)groupWithBuffer:(TDBBinary *)buffer withError:(NSError *__autoreleasing *)error;
++(TDBTransaction *)groupWithBuffer:(TDBBinary *)buffer withError:(NSError *__autoreleasing *)error;
 
-+(TDBGroup *)group;
++(TDBTransaction *)group;
 
 -(NSString *)getTableName:(NSUInteger)table_ndx;
 
